--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite --port 8080",
     "build": "vite build",
-    "preview": "vite preview --port 8080"
+    "preview": "vite preview --port 8080",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@vueuse/core": "^13.1.0",
@@ -24,6 +25,7 @@
     "@popperjs/core": "^2.11.8",
     "@vitejs/plugin-vue": "^5.2.1",
     "bootstrap": "^5.3.3",
+    "gh-pages": "^6.3.0",
     "jquery": "^3.7.1",
     "vite": "^6.2.0"
   }
